fix the navbar overflow 2

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,7 +122,7 @@ a {
 
 .page-nav {
   display: flex;
-  font-size: 21px;
+  font-size: 17px;
   line-height: 24px;
   font-weight: 700;
   list-style: none;
